smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-multiple-lines.smithy
// Syntax error at line 5, column 4
$version: "2.0"
namespace smithy.example

use
smithy.example#Foo
